objects/LeadConversionReportData__c.object
<CustomObject>
    <description>Object contains the records with all the stages from the report with their amount last month and current month</description>
    <fields>
        <fullName>CurrentMonthAmount__c</fullName>
        <description>Stores the amount of a particular stage of the current month</description>
        <label>CurrentMonthAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastMonthAmount__c</fullName>
        <description>Stores the amount of the particular stage that of last month.</description>
        <label>LastMonthAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeadVelocityRate__c</fullName>
        <description>This field calculates the percentage of lead conversion compared to last month and the current month</description>
        <formula>((CurrentMonthAmount__c -  LastMonthAmount__c ) /  LastMonthAmount__c )</formula>
        <label>LeadVelocityRate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>It stores the month name ,during which the lead conversion rate has been calculated for  a particular stage</description>
        <label>Month</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>LeadConversionReportData</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Month__c</columns>
        <columns>NAME</columns>
        <columns>CurrentMonthAmount__c</columns>
        <columns>LastMonthAmount__c</columns>
        <columns>LeadVelocityRate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Stage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeadConversionReportDatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>